--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -1,6 +1,10 @@
 /*!******************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/postcss-loader/dist/cjs.js!./node_modules/sass-loader/dist/cjs.js!./src/scss/app.scss ***!
   \******************************************************************************************************************************************************/
+@import url(https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap);
+/*!**********************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/postcss-loader/dist/cjs.js!./node_modules/sass-loader/dist/cjs.js!./src/scss/app.scss (1) ***!
+  \**********************************************************************************************************************************************************/
 /* By Athlon Front-End Team */
 /* Core variables */
 /**
@@ -234,230 +238,369 @@ pre {
 /**
  * Helper mixins
 */
-/* Vendor */
-/* Components */
+/* GLobal */
+body {
+  font-family: "Montserrat", sans-serif;
+}
+
+p {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0.2px;
+  color: #737373;
+}
+
+[class$=__container] {
+  margin: 0 auto;
+  max-width: 1046px;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 1046px;
+}
+.container--hero {
+  min-height: calc(100vh - 40px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+[class$=__header] {
+  margin: 0 auto 40px;
+  max-width: 510px;
+  text-align: center;
+}
+
+.title-common {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 57px;
+  letter-spacing: 0.2px;
+  color: #252B42;
+  margin-bottom: 20px;
+}
+
+.section {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.button {
+  display: inline-block;
+  padding: 10px 36px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 28px;
+  text-align: center;
+  letter-spacing: 0.2px;
+  border: 1px solid;
+  -webkit-transition: color 0.5s ease, background-color 0.5s ease;
+  transition: color 0.5s ease, background-color 0.5s ease;
+}
+.button--rounded {
+  border-radius: 37px;
+}
+.button--primary {
+  background-color: #FFA62B;
+  border-color: #FFA62B;
+  color: #fff;
+}
+.button--primary:hover {
+  color: #FFA62B;
+  background-color: transparent;
+}
+.button--secondary {
+  background-color: transparent;
+  border-color: #00A0C1;
+  color: #00A0C1;
+}
+.button--secondary:hover {
+  color: #fff;
+  background-color: #00A0C1;
+}
+
+.icon-svg {
+  fill: #00A0C1;
+}
+.icon-svg:hover {
+  fill: #fff;
+}
+
+.why-us-container {
+  margin: 0 auto;
+  max-width: 1076px;
+  padding: 0 15px;
+  height: 100%;
+}
+
+[class$=_1header] {
+  margin: 45px auto;
+  max-width: 510px;
+  text-align: center;
+}
+
+.why-us-title {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 57px;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  letter-spacing: 0.2px;
+  color: #252B42;
+  margin-bottom: 20px;
+}
+
+[class*=_1container] {
+  margin: 0 auto;
+  max-width: 1076px;
+  padding: 0 15px;
+  height: 100%;
+}
+
+/* Sections */
+.header-main {
+  background: url(../images/design/back.0758ca.jpg);
+  background-size: cover;
+  background-position: top right;
+  min-height: calc(100vh - 40px);
+}
+
+.header-bar {
+  height: 104px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.header-bar__logo {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 32px;
+  color: #252B42;
+  -webkit-transition: opacity 0.5s ease;
+  transition: opacity 0.5s ease;
+}
+.header-bar__logo:hover {
+  opacity: 0.6;
+}
+.header-bar__menu {
+  margin-left: 100px;
+}
+.header-bar__menu-item {
+  display: inline-block;
+  /*&:not(:last-child) {
+      margin-right: 21px;
+  }*/
+}
+.header-bar__menu-item + .header-bar__menu-item {
+  margin-left: 21px;
+}
+.header-bar__menu-link {
+  color: #737373;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.2px;
+  -webkit-transition: color 0.5s ease;
+  transition: color 0.5s ease;
+}
+.header-bar__menu-link:hover {
+  color: #252B42;
+}
+
+.header-hero {
+  margin-top: 80px;
+  margin-bottom: auto;
+}
+.header-hero__title {
+  font-weight: 800;
+  font-size: 58px;
+  line-height: 80px;
+  letter-spacing: 0.2px;
+  color: #252B42;
+  text-transform: uppercase;
+  max-width: 509px;
+}
+.header-hero__descr {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  letter-spacing: 0.2px;
+  color: #737373;
+  margin: 35px 0;
+  max-width: 376px;
+}
+
+.header-bottom {
+  margin-bottom: -20px;
+}
+.header-bottom__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0 -15px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  row-gap: 15px;
+}
+.header-bottom__item {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 33.333%;
+          flex: 1 0 33.333%;
+  padding: 0 15px;
+  min-width: 280px;
+}
+
+@media all and (max-width: 800px) {
+  .item-header {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+.item-header {
+  padding: 35px 30px;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.07);
+          box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.07);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  cursor: default;
+}
+.item-header:hover {
+  background-color: #00A0C1;
+}
+.item-header:hover .item-header__name,
+.item-header:hover .item-header__descr {
+  color: #fff;
+}
+.item-header:hover .item-header__img svg path {
+  fill: #fff;
+}
+.item-header__img {
+  margin-bottom: 10px;
+}
+.item-header__name {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 32px;
+  letter-spacing: 0.1px;
+  color: #252B42;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  margin-bottom: 10px;
+  white-space: nowrap;
+}
+.item-header__descr {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0.2px;
+  color: #737373;
+}
+
+.why-us {
+  padding: 215px 0 80px;
+  background-color: #FAFAFA;
+}
+.why-us_boxes {
+  padding-top: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0 -15px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  row-gap: 15px;
+}
+.why-us_box-item {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 25%;
+          flex: 1 0 25%;
+  padding: 0 15px;
+  min-width: 230px;
+}
+
+.item-1header {
+  padding: 30px 40px;
+  background-color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+  cursor: default;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  cursor: default;
+}
+.item-1header:hover {
+  background-color: #00A0C1;
+}
+.item-1header:hover .item-1header_text,
+.item-1header:hover .item-1header_dscrp {
+  color: #fff;
+}
+.item-1header:hover .item-1header_svg-image svg path {
+  fill: #fff;
+}
+.item-1header_svg-image {
+  margin-bottom: 10px;
+}
+.item-1header_text {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 32px;
+  letter-spacing: 0.1px;
+  color: #252B42;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  margin-bottom: 10px;
+  white-space: nowrap;
+  color: #252B42;
+}
+.item-1header_dscrp {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  white-space: nowrap;
+  text-align: center;
+  letter-spacing: 0.1px;
+  color: #737373;
+}
+
 /* Browser specific styles */
 /**
  * Dirty hacks, yes internet explorer, we are looking at you
 */
 /* Demo Page styles */
-body {
-  background: #333;
-  color: #fff;
-  font-family: "DINP-R", arial, serif;
-  font-size: 1.3em;
-}
-
-header {
-  font-size: 2em;
-  color: #464646;
-  text-align: center;
-  background: #fff url(../images/design/heading.bf6db9.png) center 20px no-repeat;
-  padding: 60px 30px 30px;
-  background-size: 160px;
-  width: 90%;
-  margin: 20px auto;
-  position: relative;
-}
-header small {
-  font-size: 0.5em;
-}
-header small img {
-  display: inline;
-  width: 20px;
-}
-
-main {
-  background: #fff;
-  color: #000;
-  margin: 20px auto;
-  padding: 40px;
-  width: 90%;
-}
-main h1 {
-  font-size: 2em;
-  font-weight: bold;
-  padding: 20px;
-  text-align: center;
-}
-main h2 {
-  font-weight: bold;
-  font-size: 1.5em;
-  text-align: center;
-  padding: 20px;
-}
-main h3 {
-  font-weight: bold;
-  text-align: center;
-  padding: 10px;
-}
-
-.badges {
-  line-height: 0.5em;
-}
-.badges img {
-  display: inline;
-}
-.badges h6 {
-  font-size: 0.5em;
-}
-
-a {
-  color: #ec1f4e;
-}
-a:hover {
-  color: #000;
-}
-
-address {
-  color: #999;
-}
-
-pre {
-  margin: 10px;
-  padding: 20px;
-}
-pre code {
-  display: block;
-  background: #333;
-  color: #fff;
-  padding: 10px;
-  border-left: 6px solid #ec1f4e;
-}
-
-.logo {
-  margin: 0 auto;
-  display: block;
-}
-
-ul {
-  list-style-type: square;
-  list-style-position: inside;
-}
-
-ol {
-  list-style-type: decimal;
-  list-style-position: inside;
-}
-
-ul ul,
-ol ul {
-  list-style-type: circle;
-  list-style-position: inside;
-  margin-left: 15px;
-}
-
-ol ol,
-ul ol {
-  list-style-type: lower-latin;
-  list-style-position: inside;
-  margin-left: 15px;
-}
-
-blockquote {
-  background: #f1f1f1;
-  border-left: 4px solid #ec1f4e;
-  border-radius: 3px;
-  margin: 10px 0;
-  padding: 10px 10px 10px 20px;
-}
-
-code {
-  font-family: Consolas, "courier new";
-  color: #ec1f4e;
-  background-color: #f1f1f1;
-  padding: 2px;
-  font-size: 1em;
-  border-radius: 3px;
-}
-
-footer {
-  text-align: center;
-  padding-bottom: 20px;
-}
-footer a:hover {
-  color: #fff;
-}
-
-.github-corner:hover .octo-arm {
-  -webkit-animation: octocat-wave 560ms ease-in-out;
-          animation: octocat-wave 560ms ease-in-out;
-}
-
-@-webkit-keyframes octocat-wave {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  20% {
-    -webkit-transform: rotate(-25deg);
-            transform: rotate(-25deg);
-  }
-  40% {
-    -webkit-transform: rotate(10deg);
-            transform: rotate(10deg);
-  }
-  60% {
-    -webkit-transform: rotate(-25deg);
-            transform: rotate(-25deg);
-  }
-  80% {
-    -webkit-transform: rotate(10deg);
-            transform: rotate(10deg);
-  }
-  100% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-}
-
-@keyframes octocat-wave {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  20% {
-    -webkit-transform: rotate(-25deg);
-            transform: rotate(-25deg);
-  }
-  40% {
-    -webkit-transform: rotate(10deg);
-            transform: rotate(10deg);
-  }
-  60% {
-    -webkit-transform: rotate(-25deg);
-            transform: rotate(-25deg);
-  }
-  80% {
-    -webkit-transform: rotate(10deg);
-            transform: rotate(10deg);
-  }
-  100% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-}
-@media (max-width: 500px) {
-  .github-corner:hover .octo-arm {
-    -webkit-animation: none;
-            animation: none;
-  }
-  .github-corner .octo-arm {
-    -webkit-animation: octocat-wave 560ms ease-in-out;
-            animation: octocat-wave 560ms ease-in-out;
-  }
-}
-@media only screen and (min-width: 1024px) {
-  header,
-main {
-    width: 60%;
-  }
-}
-@media only screen and (max-width: 1023px) {
-  main h1 {
-    font-size: 1.3em;
-  }
-  main h2 {
-    font-size: 1.1em;
-  }
-}
+/* @import 'demo'; */
+/* Main style file */
